update cmake and gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,29 @@
-cmake_minimum_required(VERSION 3.10)   # Require CMake version
-project(MyProject)                     # Project name
+cmake_minimum_required(VERSION 3.10)
+project(ChessGUI)
 
-set(CMAKE_CXX_STANDARD 17)             # Use C++17
+# Require C++17
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Include header directory
+# Include your headers
 include_directories(include)
 
-# Define executable with sources
-add_executable(chess
-    main.cpp
+# Source files
+set(SOURCES
+    game_gui.cpp
     src/chess.cpp
+)
+
+# Find SFML
+find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
+
+# Create executable
+add_executable(ChessGUI ${SOURCES})
+
+# Link SFML libraries
+target_link_libraries(ChessGUI sfml-graphics sfml-window sfml-system)
+
+# Optional: set output directory for binaries
+set_target_properties(ChessGUI PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
